Add surefire plugin with preview feature